[gd_scene load_steps=4 format=3 uid="uid://cjtn5oiyxfdqt"]

[ext_resource type="Script" path="res://#server/menus/sv_main_menu.gd" id="1_w1nvd"]
[ext_resource type="PackedScene" uid="uid://kxg28u4khpu1" path="res://#shared/menus/Console.tscn" id="2_hhbtn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5l6u"]
bg_color = Color(0.278431, 0.278431, 0.278431, 1)

[node name="sv_main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1nvd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = SubResource("StyleBoxFlat_x5l6u")
text = "Server"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerStatus" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status: Offline"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerStartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Server"

[node name="ClientStartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Client"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Console" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_hhbtn")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/ServerStartButton" to="." method="_on_server_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ClientStartButton" to="." method="_on_client_start_button_pressed"]
